--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"cors": "^2.8.5",
 		"eslint": "^8.57.0",
 		"eslint-plugin-perfectionist": "^3.1.0",
 		"eslint-plugin-react": "^7.35.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
+		"express": "^4.19.2",
+		"helmet": "^7.1.0",
 		"nodemon": "^3.1.4",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -19,7 +22,7 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"backend": "nodemon backend/server.js",
+		"backend": "nodemon backend/server.mjs",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
