--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
 		"eslint": "^8.57.0",
 		"eslint-plugin-perfectionist": "^3.1.0",
 		"eslint-plugin-react": "^7.35.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"express": "^4.19.2",
 		"helmet": "^7.1.0",
+		"mongoose": "^8.6.0",
 		"nodemon": "^3.1.4",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
