--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"eslint": "^8.57.0",
@@ -16,6 +17,7 @@
 		"express": "^4.19.2",
 		"helmet": "^7.1.0",
 		"mongoose": "^8.6.0",
+		"nodemailer": "^6.9.14",
 		"nodemon": "^3.1.4",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
