--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-MONGODBSRV = ****
-USERNAME = ****
-PASSWORD = ****
-APPNAME = ****
-DBNAME = ****
+MONGODBSRV = server.mongodb.net
+USERNAME = username
+PASSWORD = password
+APPNAME = server
+DBNAME = database
+USERNAME_MAIL = username
+PASSWORD_MAIL = password
+MAILING_HOST = smtp.mail.server
+TO_MAILBOX = admin@email.com
