--- a/package.json
+++ b/package.json
@@ -3,14 +3,6 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@eslint/compat": "^1.1.1",
-		"@testing-library/jest-dom": "^5.17.0",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"eslint": "^8.57.0",
-		"eslint-plugin-perfectionist": "^3.1.0",
-		"eslint-plugin-react": "^7.35.0",
-		"eslint-plugin-react-hooks": "^4.6.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.26.0",
@@ -43,6 +35,14 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-		"tailwindcss": "^3.4.7"
+		"tailwindcss": "^3.4.7",
+		"eslint": "^8.57.0",
+		"eslint-plugin-perfectionist": "^3.1.0",
+		"eslint-plugin-react": "^7.35.0",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"@eslint/compat": "^1.1.1",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0"
 	}
 }
