--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"helmet": "^7.1.0",
+		"mongoose": "^8.6.0",
+		"nodemailer": "^6.9.14",
+		"nodemon": "^3.1.4",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.26.0",
@@ -10,7 +17,7 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "nodemon server.mjs",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
@@ -35,14 +42,14 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-		"tailwindcss": "^3.4.7",
+		"@eslint/compat": "^1.1.1",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
 		"eslint": "^8.57.0",
 		"eslint-plugin-perfectionist": "^3.1.0",
 		"eslint-plugin-react": "^7.35.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
-		"@eslint/compat": "^1.1.1",
-		"@testing-library/jest-dom": "^5.17.0",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0"
+		"tailwindcss": "^3.4.7"
 	}
 }
